//go:build detectors
// +build detectors

package plaidkey

import (
	"context"
	"fmt"
	"testing"
	"time"

	"github.com/kylelemons/godebug/pretty"
	"github.com/trufflesecurity/trufflehog/v3/pkg/detectors"

	"github.com/trufflesecurity/trufflehog/v3/pkg/common"
	"github.com/trufflesecurity/trufflehog/v3/pkg/pb/detectorspb"
)

func TestPlaidKey_FromChunk(t *testing.T) {
	ctx, cancel := context.WithTimeout(context.Background(), time.Second*5)
	defer cancel()
	testSecrets, err := common.GetSecret(ctx, "trufflehog-testing", "detectors3")
	if err != nil {
		t.Fatalf("could not get test secrets from GCP: %s", err)
	}
	// secret := testSecrets.MustGetField("PLAIDKEY_SECRET")
	// inactiveSecret := testSecrets.MustGetField("PLAIDKEY_SECRET_INACTIVE")
	// id := testSecrets.MustGetField("PLAIDKEY_CLIENTID")
	secret := "6e611cb8934363457b5e028d66c16c"
	id := "60e3ee4019a2660010f8bc54"
	env := "sandbox"

	type args struct {
		ctx    context.Context
		data   []byte
		verify bool
	}
	tests := []struct {
		name    string
		s       Scanner
		args    args
		want    []detectors.Result
		wantErr bool
	}{
		{
			name: "found, verified",
			s:    Scanner{},
			args: args{
				ctx:    context.Background(),
				data:   []byte(fmt.Sprintf("You can find a plaidkey secret %s within plaidkey %s", secret, id)),
				verify: true,
			},
			want: []detectors.Result{
				{
					DetectorType: detectorspb.DetectorType_PlaidKey,
					Verified:     true,
					ExtraData: map[string]string{
						"environment": fmt.Sprintf("https://%s.plaid.com", env),
					},
				},
			},
			wantErr: false,
		},
		// {
		// 	name: "found, unverified",
		// 	s:    Scanner{},
		// 	args: args{
		// 		ctx:    context.Background(),
		// 		data:   []byte(fmt.Sprintf("You can find a plaidkey secret %s within but plaidkey %s not valid", inactiveSecret, id)), // the secret would satisfy the regex but not pass validation
		// 		verify: true,
		// 	},
		// 	want: []detectors.Result{
		// 		{
		// 			DetectorType: detectorspb.DetectorType_PlaidKey,
		// 			Verified:     false,
		// 		},
		// 	},
		// 	wantErr: false,
		// },
		// {
		// 	name: "not found",
		// 	s:    Scanner{},
		// 	args: args{
		// 		ctx:    context.Background(),
		// 		data:   []byte("You cannot find the secret within"),
		// 		verify: true,
		// 	},
		// 	want:    nil,
		// 	wantErr: false,
		// },
	}
	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			s := Scanner{}
			got, err := s.FromData(tt.args.ctx, tt.args.verify, tt.args.data)
			if (err != nil) != tt.wantErr {
				t.Errorf("PlaidKey.FromData() error = %v, wantErr %v", err, tt.wantErr)
				return
			}
			for i := range got {
				if len(got[i].Raw) == 0 {
					t.Fatalf("no raw secret present: \n %+v", got[i])
				}
				got[i].Raw = nil
			}
			if diff := pretty.Compare(got, tt.want); diff != "" {
				t.Errorf("PlaidKey.FromData() %s diff: (-got +want)\n%s", tt.name, diff)
			}
		})
	}
}

func BenchmarkFromData(benchmark *testing.B) {
	ctx := context.Background()
	s := Scanner{}
	for name, data := range detectors.MustGetBenchmarkData() {
		benchmark.Run(name, func(b *testing.B) {
			b.ResetTimer()
			for n := 0; n < b.N; n++ {
				_, err := s.FromData(ctx, false, data)
				if err != nil {
					b.Fatal(err)
				}
			}
		})
	}
}
